# microsoft-outlook-addin-quill

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
.omc/plans/: primevue-tailwind-migration.md
docs/adr/: .archgate.yaml  001-xml-manifest-over-json.md  002-pure-client-side-architecture.md  003-vue-vite-over-yeoman.md  004-web-crypto-key-encryption.md  005-cors-proxy-for-llm-access.md  006-python-pipeline-runner.md  007-minimax-anthropic-reuse.md  008-roaming-settings-sync.md  template.md
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/docs/: index.md
frontend/docs/.vitepress/: config.ts
frontend/docs/guide/: architecture.md  getting-started.md
frontend/docs/reference/: api.md
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: setup.ts
frontend/src/composables/: useAuth.ts  useChat.ts  useMailbox.ts  useOffice.ts  useSettings.ts
frontend/src/router/: index.ts
frontend/src/services/: crypto.ts  storage.ts
frontend/src/stores/: auth.ts  chat.ts  (+1 more)
manifests/: manifest.xml
spec/: auth.md  constraints.md  dev-setup.md  llm-providers.md  manifest.md  overview.md  pipelines.md  storage.md  tab1-email-ai.md  tab2-automation.md  vue-frontend.md
tools/pipeline_runner/: pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  __main__.py  config.py  runner.py
tools/pipeline_runner/pipeline_runner/steps/: adr_check.py  build.py  coverage.py  lint.py  manifest.py  test.py  ui_test.py
tools/pipeline_runner/tests/: __init__.py  test_runner.py  test_steps.py
(+27 files in other folders)
