[tool.poetry]
name = "quill-pipeline-runner"
version = "0.1.0"
description = "Pipeline runner for the Quill Outlook Add-in project"
authors = ["Quill Team"]
readme = "README.md"
packages = [{include = "pipeline_runner"}]

[tool.poetry.scripts]
pipeline-runner = "pipeline_runner.__main__:cli"

[tool.poetry.dependencies]
python = ">=3.12"
click = "^8.1"
rich = "^13.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pipeline_runner"]

[tool.coverage.report]
fail_under = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
